--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 annotated-types==0.6.0
 anyio==3.7.1
+certifi==2023.7.22
 click==8.1.7
+cloudinary==1.36.0
 colorama==0.4.6
 dnspython==2.4.2
 exceptiongroup==1.1.3
@@ -13,9 +15,11 @@ pydantic_core==2.10.1
 pymongo==4.5.0
 python-dotenv==1.0.0
 PyYAML==6.0.1
+six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.8.0
+urllib3==2.0.7
 uvicorn==0.23.2
 watchfiles==0.20.0
 websockets==11.0.3
